--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
 
-<body>
+<body style="background-image: url('/assets/fundo.png')">
   <app-root></app-root>
 </body>
 
